update default block color

--- a/colorful-dream/beamerthemecolorful-dream.sty
+++ b/colorful-dream/beamerthemecolorful-dream.sty
@@ -117,7 +117,7 @@
 \defbeamertemplate{description item}{colorful-dream}{\textsc{\small\insertdescriptionitem:}}
 \setbeamertemplate{description item}[colorful-dream]
 
-\setbeamercolor{block title}{use=structure,fg=btcd@color@white,bg=btcd@solidF}
+\setbeamercolor{block title}{use=structure,fg=btcd@color@white,bg=btcd@color@primary}
 \setbeamercolor{block body}{parent=normal text,use=block title,bg=block title.bg!10!bg}
 
 % pad itemize bullets
