update toc spacing

--- a/colorful-dream/beamerthemecolorful-dream.sty
+++ b/colorful-dream/beamerthemecolorful-dream.sty
@@ -91,7 +91,7 @@
 \setbeamerfont{section in toc}{size=\fontsize{12}{14}}
 \setbeamerfont{subsection in toc}{size=\fontsize{8}{12}}
 \setbeamerfont{disabled subsection in toc}{size=\fontsize{8}{12}}
-\setbeamertemplate{section in toc}{\medskip\vfill\null\inserttocsectionnumber.\space\inserttocsection\par}
+\setbeamertemplate{section in toc}{\bigskip\null\inserttocsectionnumber.\space\inserttocsection\smallskip\par}
 
 \setbeamertemplate{subsection in toc}{\qquad{\scalebox{.65}{\raisebox{1.25\p@}{$\blacksquare$}}}\hspace{1em}\inserttocsubsection\par}
 \setbeamertemplate{disabled subsection in toc}{\@declaredcolor{gray}\qquad{\scalebox{.65}{\raisebox{1.25\p@}{$\blacksquare$}}}\hspace{1em}\inserttocsubsection\par}
