update task color

--- a/colorful-dream/beamerthemecolorful-dream.sty
+++ b/colorful-dream/beamerthemecolorful-dream.sty
@@ -271,7 +271,7 @@
 
 %% theorems
 \ifbtcd@theorems@
-\colorlet{btcd@color@exercise}{btcd@color@alerted!27!btcd@color@black}
+\colorlet{btcd@color@exercise}{btcd@color@alternative!27!btcd@color@black}
 \colorlet{btcd@color@exercise@b}{btcd@color@exercise!10}
 
 \def\th@exercise{%
