compressing sidebar cite

--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -192,7 +192,7 @@
 
 \def\SidebarCite#1{%
     \appto\btdl@sidebar@content{%
-        \cite{#1}~\citeauthor{#1}: \citetitle{#1}~\hfill\textcolor{gray}{\citeyear{#1}}\par
+        \cite{#1}: \citetitle{#1}~\hfill\textcolor{gray}{\citeyear{#1}}\par
     }%
 }
 
