fixing dividing lines typo

--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -297,8 +297,7 @@
     }%
 }
 
-\def\PostTitlepage{}
-\def\PostTitlepage{}
+\def\PreTitlepage{}\def\PostTitlepage{}
 \AtBeginDocument{%
 \begingroup
 \begin{frame}[plain,b]%
